<uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.newo.newoapp.narline"
    android:id="@+id/pullFillUserInfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/actionbar_height"
    tools:context=".FillUserInfoActivity" >

    <ScrollView
        android:id="@+id/scrollFillUSerInfo"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:animateLayoutChanges="true"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/llFillUserInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/margin_small" >

            <com.newo.newoapp.RoundedImageView
                android:id="@+id/rimgFillInfoUserImageProfile"
                android:layout_width="@dimen/profile_user_image_dimension"
                android:layout_height="@dimen/profile_user_image_dimension"
                android:clickable="true"
                android:src="@drawable/icon_pofile_image"
                app:border_color="@drawable/selector_imageview_blue_border"
                app:border_width="@dimen/roudned_image_border_dimension"
                app:corner_radius="64dip" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvFillInfoRequired1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fill_user_info_required1"
                    android:textColor="@color/d_gray"
                    android:textSize="@dimen/TextSizeSmall" />

                <TextView
                    android:id="@+id/tvFillInfoRequired2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fill_user_info_required2"
                    android:textColor="@color/d_gray"
                    android:textSize="@dimen/TextSizeLarge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_layout_background"
                android:orientation="vertical"
                android:padding="@dimen/margin_small" >

                <EditText
                    android:id="@+id/etxtFillInfoEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="25"
                    android:hint="@string/text_hint_email"
                    android:inputType="textEmailAddress" />

                <Button
                    android:id="@+id/btnFillInfoEditPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/narmaniatheme_btn_default_holo_light"
                    android:text="@string/title_activity_edit_password"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="right"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvFillInfoPersonal1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fill_user_info_personal1"
                    android:textColor="@color/d_gray"
                    android:textSize="@dimen/TextSizeSmall" />

                <TextView
                    android:id="@+id/tvFillInfoPersonal2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fill_user_info_personal2"
                    android:textColor="@color/d_gray"
                    android:textSize="@dimen/TextSizeLarge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_layout_background"
                android:orientation="vertical"
                android:padding="@dimen/margin_small" >

                <EditText
                    android:id="@+id/etxtFillInfoName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="25"
                    android:hint="@string/text_hint_name"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/etxtFillInfoPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="25"
                    android:hint="@string/text_hint_phone"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/etxtFillInfoBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:editable="false"
                    android:ems="25"
                    android:focusable="false"
                    android:hint="@string/text_hint_birthday"
                    android:inputType="date" />

                <EditText
                    android:id="@+id/etxtFillInfoGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:ems="25"
                    android:focusable="false"
                    android:hint="@string/text_hint_gender"
                    android:inputType="text" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout>