<uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pullChangePass"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/actionbar_height"
    tools:context=".ChangePasswordActivity" >

    <ScrollView
        android:id="@+id/scrollChangePass"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:animateLayoutChanges="true"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/llChangePass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_small" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvChangePassCurrent1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password_current1"
                    android:textColor="@color/d_gray"
                    android:textSize="@dimen/TextSizeSmall" />

                <TextView
                    android:id="@+id/tvChangePassCurrent2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password_current2"
                    android:textColor="@color/d_gray"
                    android:textSize="@dimen/TextSizeLarge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_layout_background"
                android:orientation="vertical"
                android:padding="@dimen/margin_small" >

                <EditText
                    android:id="@+id/etxtChangePassCurrent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="25"
                    android:hint="@string/text_hint_password_current"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="right"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvChangePassNew1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password_new1"
                    android:textColor="@color/d_gray"
                    android:textSize="@dimen/TextSizeSmall" />

                <TextView
                    android:id="@+id/tvChangePassNew2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password_new2"
                    android:textColor="@color/d_gray"
                    android:textSize="@dimen/TextSizeLarge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_layout_background"
                android:orientation="vertical"
                android:padding="@dimen/margin_small" >

                <EditText
                    android:id="@+id/etxtChangePassNew1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="25"
                    android:hint="@string/text_hint_password_new1"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/etxtChangePassNew2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="25"
                    android:hint="@string/text_hint_password_new2"
                    android:inputType="textPassword" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout>